@@ -28,6 +28,9 @@ under the hood:
   the upper bound is finite)
 + changed definition of q(DExp(..)) in initialize method in AllInitialize.R 
   from ifelse expressions to index operations  to avoid warnings 
+
+bug fixes
++ fixed a (newly introduced) bug in exp() for DiscreteDistribution -- forgot to return obj ...
   
 ##############
 v 2.7
